infra/kubernets/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: micrologs-ingress
    labels:
        app.kubernetes.io/name: micrologs-ingress
spec:
    rules:
        - http:
              paths:
                  - pathType: Prefix
                    path: "/"
                    backend:
                        service:
                            name: gateway-service
                            port:
                                number: 8080
